--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26635,6 +26635,10 @@ html {
   background-color: #f8f8f8 !important;
 }
 
+.debug {
+  border: 1px solid red;
+}
+
 /* Bulma Utilities */
 .pagination-previous,
 .pagination-next,
@@ -31300,7 +31304,7 @@ button.dropdown-item.is-active {
 
 .navbar {
   background-color: white;
-  min-height: 5rem;
+  min-height: 3.25rem;
   position: relative;
   z-index: 30;
 }
@@ -31867,7 +31871,7 @@ button.dropdown-item.is-active {
 .navbar > .container {
   align-items: stretch;
   display: flex;
-  min-height: 5rem;
+  min-height: 3.25rem;
   width: 100%;
 }
 .navbar.has-shadow {
@@ -31891,11 +31895,11 @@ button.dropdown-item.is-active {
 
 html.has-navbar-fixed-top,
 body.has-navbar-fixed-top {
-  padding-top: 5rem;
+  padding-top: 3.25rem;
 }
 html.has-navbar-fixed-bottom,
 body.has-navbar-fixed-bottom {
-  padding-bottom: 5rem;
+  padding-bottom: 3.25rem;
 }
 
 .navbar-brand,
@@ -31903,7 +31907,7 @@ body.has-navbar-fixed-bottom {
   align-items: stretch;
   display: flex;
   flex-shrink: 0;
-  min-height: 5rem;
+  min-height: 3.25rem;
 }
 
 .navbar-brand a.navbar-item:focus, .navbar-brand a.navbar-item:hover {
@@ -31921,9 +31925,9 @@ body.has-navbar-fixed-bottom {
   color: #4a4a4a;
   cursor: pointer;
   display: block;
-  height: 5rem;
+  height: 3.25rem;
   position: relative;
-  width: 5rem;
+  width: 3.25rem;
   margin-left: auto;
 }
 .navbar-burger span {
@@ -31996,7 +32000,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   flex-shrink: 0;
 }
 .navbar-item img {
-  max-height: 4rem;
+  max-height: 1.75rem;
 }
 .navbar-item.has-dropdown {
   padding: 0;
@@ -32007,7 +32011,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 .navbar-item.is-tab {
   border-bottom: 1px solid transparent;
-  min-height: 5rem;
+  min-height: 3.25rem;
   padding-bottom: calc(0.5rem - 1px);
 }
 .navbar-item.is-tab:focus, .navbar-item.is-tab:hover {
@@ -32096,17 +32100,17 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .navbar.is-fixed-top .navbar-menu, .navbar.is-fixed-top-touch .navbar-menu {
     -webkit-overflow-scrolling: touch;
-    max-height: calc(100vh - 5rem);
+    max-height: calc(100vh - 3.25rem);
     overflow: auto;
   }
 
   html.has-navbar-fixed-top-touch,
 body.has-navbar-fixed-top-touch {
-    padding-top: 5rem;
+    padding-top: 3.25rem;
   }
   html.has-navbar-fixed-bottom-touch,
 body.has-navbar-fixed-bottom-touch {
-    padding-bottom: 5rem;
+    padding-bottom: 3.25rem;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -32119,7 +32123,7 @@ body.has-navbar-fixed-bottom-touch {
   }
 
   .navbar {
-    min-height: 5rem;
+    min-height: 3.25rem;
   }
   .navbar.is-spaced {
     padding: 1rem 2rem;
@@ -32275,19 +32279,19 @@ body.has-navbar-fixed-bottom-touch {
 
   html.has-navbar-fixed-top-desktop,
 body.has-navbar-fixed-top-desktop {
-    padding-top: 5rem;
+    padding-top: 3.25rem;
   }
   html.has-navbar-fixed-bottom-desktop,
 body.has-navbar-fixed-bottom-desktop {
-    padding-bottom: 5rem;
+    padding-bottom: 3.25rem;
   }
   html.has-spaced-navbar-fixed-top,
 body.has-spaced-navbar-fixed-top {
-    padding-top: 7rem;
+    padding-top: 5.25rem;
   }
   html.has-spaced-navbar-fixed-bottom,
 body.has-spaced-navbar-fixed-bottom {
-    padding-bottom: 7rem;
+    padding-bottom: 5.25rem;
   }
 
   a.navbar-item.is-active,
@@ -32304,7 +32308,7 @@ body.has-spaced-navbar-fixed-bottom {
   }
 }
 .hero.is-fullheight-with-navbar {
-  min-height: calc(100vh - 5rem);
+  min-height: calc(100vh - 3.25rem);
 }
 
 .pagination {
