--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,6 +24,10 @@ html{
 }
 
 
+.debug{
+    border: 1px solid red;
+}
+
 
 
 
@@ -111,8 +115,8 @@ $link-focus-border: $primary;
 
 
 //navbar
-$navbar-height: 5rem;
-$navbar-item-img-max-height: 4rem;
+//$navbar-height: 5rem;
+//$navbar-item-img-max-height: 4rem;
 
 
 //$navbar-burger-color: white;
